feature: improv structure data
